# numerologist-ai

./: .env.example  .gitignore  Makefile  README.md  TEST_EXECUTION_GUIDE_3.10.md  docker-compose.yml
backend/: .env.example  README.md  alembic.ini  pyproject.toml  test_voice_imports.py
backend/alembic/: env.py
backend/alembic/versions/: 2a534eee493f_init_db.py  3cb759b9fef7_create_oauth_accounts_table.py  55e8d1b05b94_create_users_table.py  5f0f00efe0dd_add_numerology_interpretation_table.py  6f2e5a1342f9_add_conversation_context_fields.py  7a8b9c0d1e2f_add_conversations_table.py  829cdee8a29a_add_conversationmessage_model_for_.py  99432e13f543_initial_setup.py  f59581dfcb26_init_db.py
backend/scripts/: test_pipecat_bot.py
backend/src/: main.py
backend/src/api/: __init__.py
backend/src/core/: __init__.py  database.py  deps.py  redis.py  security.py  settings.py
backend/src/models/: __init__.py  conversation.py  conversation_message.py  numerology_interpretation.py  oauth_account.py  user.py
backend/src/schemas/: __init__.py  user.py
backend/src/scripts/: seed_numerology.py
backend/src/services/: conversation_service.py  daily_service.py  numerology_service.py  oauth_service.py
backend/src/voice_pipeline/: __init__.py  function_handlers.py  numerology_functions.py  pipecat_bot.py  system_prompts.py
backend/tests/: __init__.py  conftest.py  test_database.py  test_health.py
backend/tests/core/: test_deps.py  test_security.py
backend/tests/models/: test_conversation_message.py
backend/tests/services/: test_conversation_service.py  (+2 more)
docs/: PRD.md  (+19 more)
(+194 files in other folders)
