[project]
name = "numerologist-api"
version = "0.1.0"
description = "Numerologist AI Backend"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "sqlmodel>=0.0.14",
    "alembic>=1.13.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-jose[cryptography]>=3.3.0",
    "bcrypt>=4.1.0",
    "redis>=5.0.0",
    "psycopg2-binary>=2.9.0",
    "email-validator>=2.3.0",
    "google-auth>=2.25.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=24.1.0",
    "ruff>=0.1.0",
    "httpx>=0.27.0",
]

[dependency-groups]
dev = [
    "pytest>=7.4.0",
    "black>=24.1.0",
    "ruff>=0.1.0",
    "httpx>=0.27.0",
]
